# emscripten-bug-reproduce

./: .gitignore  CMakeLists.txt  README.md  a.cpp  b.cpp  b.h  c.cpp  c.h  main.cpp  pyproject.toml  server.py  side.cpp  test.html  test.js
NoThread/: CMakeLists.txt
Thread/: CMakeLists.txt
